# yolov8_api

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 01_user.py  02_model.py  03_project.py  04_sample.py
scripts/: put_bounding_boxes.py  remove_duplicates.py
yolov8_api/: background_tasks.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py  models.py  utils.py
yolov8_api/crud/: __init__.py  crud_base.py  crud_models.py  crud_projects.py  crud_samples.py  crud_users.py
yolov8_api/logic/: __init__.py  model_manager.py  project_manager.py  sample_manager.py  user_manager.py
yolov8_api/routes/: auth_routes.py  model_routes.py  project_routes.py  sample_routes.py
yolov8_api/schemas/: __init__.py  auth_schemas.py  model_schemas.py  project_schemas.py  sample_schemas.py
