[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yolov8-api"
version = "0.1.0"
description = "YOLOv8 Object Detection API"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.103.0" }
ultralytics = "^8.0.121"
pafy = "^0.5.5"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
httpx = "^0.25.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pre-commit = "^3.3.3"
ruff = "0.0.275"
mypy = "1.4.1"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
ignore = ["E501"]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
